see facilities and location on dashboard

--- a/appoint_pro/src/locales/en.json
+++ b/appoint_pro/src/locales/en.json
@@ -154,6 +154,7 @@
         "navigation": {
             "dashboard": "Dashboard",
             "organizations": "Organizations",
+            "locations": "Locations",
             "customers": "Customers",
             "appointments": "Appointments",
             "analytics": "Analytics",
