--- a/appoint_pro/src/locales/nl.json
+++ b/appoint_pro/src/locales/nl.json
@@ -155,6 +155,7 @@
         "navigation": {
             "dashboard": "Dashboard",
             "organizations": "Organisaties",
+            "locations": "Locaties",
             "customers": "Klanten",
             "appointments": "Afspraken",
             "analytics": "Analyses",
